# OlioOhjelmointiSyksy2023

build-kotitehtava1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-kotitehtava1-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
kotitehtava1/: CMakeLists.txt  main.cpp
kotitehtava2/build-kotitehtava2-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
kotitehtava2/kotitehtava2/: CMakeLists.txt  game.h  main.cpp
kotitehtava3/build-kotitehtava3-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
kotitehtava3/kotitehtava3/: CMakeLists.txt  main.cpp
kotitehtava4/build-kotitehtava4-Desktop_Qt_6_5_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
kotitehtava4/kotitehtava4/: CMakeLists.txt  asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotitehtava5/kotitehtava5/: CMakeLists.txt  asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
kotitehtava5/lisatehtava/lisatehtava/: CMakeLists.txt  devicebaseclass.cpp  devicebaseclass.h  devicedisplay.cpp  devicedisplay.h  devicemouse.cpp  devicemouse.h  devicetouchpad.cpp  devicetouchpad.h  main.cpp  mydeviceui.cpp  mydeviceui.h
kotitehtava6/kotitehtava6tehtava1/: CMakeLists.txt  main.cpp
(+185 files in other folders)
